# Distillation-Curves-Interconversion

./: ALTERNATE_METHODS_EXPLANATION.md  ARCHITECTURE.md  CODEBASE_OVERVIEW.md  CONTRIBUTING.md  CONVERSION_NOTES.md  D2887_CONVERSION_NOTES.md  D2887_TBP_FIX.md  D86 Distillation.csv  DAUBERT_REMOVAL_SUMMARY.md  DENSITY_INPUT_FEATURE.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_SUMMARY.md  GETTING_STARTED.md  GUI_USER_GUIDE.md  IMPORT_GUIDE.md  IMPORT_IMPLEMENTATION_SUMMARY.md  IMPORT_QUICK_REFERENCE.md  INTERACTIVE_TABLE_FEATURES.md  Kero D86.csv  MANIFEST.in  METHODS_VERIFICATION.md  MULTIPLE_INPUT_TYPE_SUPPORT.md  PHASE6_SESSION_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START.md  Qt Plot GUI.py  README.md  README_DISTILLATION.md  RELEASE_CHECKLIST.md  RIAZI_IMPLEMENTATION.md  TESTPYPI_UPLOAD.md  VOLUME_WEIGHT_CONVERSION_GUIDE.md  analyze_curve_differences.py  batch_processor.py  bp_conversions.py  build_package.py  daubert_index.csv  debug_api_3a3_1.py  debug_d86_curve.py  (+10 more)
.github/workflows/: tests.yml
examples/: create_sample_excel.py  sample_d2887.csv  sample_d86.csv  sample_d86_with_density.csv  tutorial.ipynb
tests/: test_bp_conversions.py  test_import_features.py  test_volume_weight_conversion.py
