[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "distillation-curve-interconv"
version = "0.2.0"
description = "Convert between petroleum distillation standards (D86, D2887, TBP) with physics-based Riazi-Daubert correlations"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "François", email = ""},
]
keywords = [
    "distillation",
    "petroleum",
    "conversion",
    "D86",
    "D2887",
    "TBP",
    "ASTM",
    "chemical-engineering",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"

dependencies = [
    "matplotlib>=3.10.7",
    "scipy>=1.16.2",
    "pandas>=2.3.3",
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]
gui = [
    "pyside6>=6.10.0",
]
all = [
    "pyside6>=6.10.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/FrancoisDK/Distillation-Curves-Interconversion"
Documentation = "https://github.com/FrancoisDK/Distillation-Curves-Interconversion/wiki"
Repository = "https://github.com/FrancoisDK/Distillation-Curves-Interconversion.git"
"Bug Tracker" = "https://github.com/FrancoisDK/Distillation-Curves-Interconversion/issues"
Changelog = "https://github.com/FrancoisDK/Distillation-Curves-Interconversion/releases"

[project.scripts]
distillation-gui = "distillation_converter_gui:main"

[tool.hatch.build.targets.wheel]
packages = [
    "bp_conversions.py",
    "distillation_converter_gui.py", 
    "distillation_api.py",
    "batch_processor.py",
]
